<resources>
    <string name="np__application_name">Nextpeer</string>
    <string name="np__place_holder_number">10</string>
    <string name="np__loading_indicator_title">Loading…</string>
    <string name="np__error_message_failed_to_change_name_title">Failed to change your name</string>
    <string name="np__error_message_failed_to_change_name_description">"Oops. An error has occurred, and we aren't able to change your name. Please check your connection and try again.
Contact us if this issue persists."</string>
    <string name="np__error_message_failed_to_change_avatar_title">Failed to change your avatar</string>
    <string name="np__error_message_failed_to_change_avatar_description">"Oops. An error has occurred, and we aren't able to change your avatar. Please check your connection and try again.
Contact us if this issue persists."</string>
    <string name="np__error_message_failed_to_create_a_match_title">Create a match</string>
    <string name="np__error_message_failed_to_create_a_match_description">"Oops. An error has occurred, and we aren't able to create the match. Please check your connection and try again.
Contact us if this issue persists."</string>
    <string name="np__error_message_failed_to_fetch_user_details_title">Failed to fetch your profile</string>
    <string name="np__error_message_failed_to_fetch_user_details_description">"The connection has timed out. Please check your connection and try again.
Contact us if this issue persists."</string>
    <string name="np__error_message_failed_to_connect_to_the_room_title">Failed to connect to the room</string>
    <string name="np__error_message_failed_to_connect_to_the_room_description">"Oops. An error has occurred, and we aren't able to connect to the room. Please check your connection and try again.
Contact us if this issue persists."</string>
    <string name="np__error_message_disconnect_from_the_room_title">Room disconnected</string>
    <string name="np__error_message_disconnect_from_the_room_description">"The connection has timed out. Please check your connection and try again.
Contact us if this issue persists."</string>
    <string name="np__error_message_no_internet_permission_title">Required Permission</string>
    <string name="np__error_message_no_internet_permission_description">"Nextpeer requires internet connection.
Please grant INTERNET permission."</string>
    <string name="np__error_message_no_mail_applications_available">There are no email applications installed on this device. Please send your report to support@nextpeer.com.</string>
    <string name="np__menu_action_settings">Settings</string>
    <string name="np__menu_action_change_name">Edit name</string>
    <string name="np__menu_action_change_avatar">Edit avatar</string>
    <string name="np__menu_action_fb_logout">Logout</string>
    <string name="np__menu_action_report_to_support">Report to Support</string>
    <string name="np__dialog_alert_confirm">OK</string>
    <string name="np__dialog_alert_negative">Cancel</string>
    <string name="np__dialog_alert_report_to_support">Report</string>
    <string name="np__dialog_changename_title">Edit your name</string>
    <string name="np__dialog_changename_button_positive">Save</string>
    <string name="np__dialog_changename_button_negative">Cancel</string>
    <string name="np__dialog_changename_error_empty_name">Name is empty.</string>
    <string name="np__dialog_changename_error_connection">Connection to the server has timed out. Please check your internet connection and try again.</string>
    <string name="np__dialog_changeavatar_title">Edit your avatar</string>
    <string name="np__dialog_changeavatar_button_positive">Save</string>
    <string name="np__dialog_changeavatar_button_negative">Cancel</string>
    <string name="np__dialog_changeavatar_error_empty_name">Name is empty.</string>
    <string name="np__dialog_changeavatar_error_connection">An error has occurred, please try again .</string>
    <string name="np__dialog_alert_logout_title">Logout - Are you sure?</string>
    <string name="np__dialog_alert_logout_description">"Logging out will remove ALL experience and user data.
Are you sure you want to proceed?"</string>
    <string name="np__dialog_alert_logout_action">Sign out</string>
    <string name="np__dialog_alert_logout_positive_action">Log me out</string>
    <string name="np__dialog__try_play_with_fb_friends_title">Play with your friends</string>
    <string name="np__dialog__try_play_with_fb_friends_description">Would you like to challenge your Facebook friends?</string>
    <string name="np__dialog__try_play_with_fb_friends_positive">YES</string>
    <string name="np__dialog__try_play_with_fb_friends_negative">Later</string>
    <string name="np__powered_by_dialog_title">Mobile Multiplayer Made Easy</string>
    <string name="np__user_profile_fetching_title">Welcome to Nextpeer</string>
    <string name="np__tournament_selection_title">Select a Tournament</string>
    <string name="np__tournament_loading_loading_bar_title_connecting">Connecting…</string>
    <string name="np__tournament_loading_this_is_you_label">THIS IS YOU</string>
    <string name="np__tournament_loading_random_title">Loading Tournament</string>
    <string name="np__tournament_loading_random_loading_bar_title_zero">Searching for players</string>
    <string name="np__tournament_loading_random_loading_bar_title_one">Found one player</string>
    <string name="np__tournament_loading_random_loading_bar_title_many">Found %d players</string>
    <string name="np__tournament_loading_friends_title">Loading Match</string>
    <string name="np__tournament_loading_friends_loading_bar_title_zero">Waiting for your friends</string>
    <string name="np__tournament_loading_friends_loading_bar_title_one">Found one friend</string>
    <string name="np__tournament_loading_friends_loading_bar_title_many">Found %d friends</string>
    <string name="np__tournament_loading_friends_loading_bar_title_stop_waiting">Your friends can join later on</string>
    <string name="np__tournament_loading_play_now_bar_title">Play Now!</string>
    <string name="np__tournament_results_replay_bar_button_replay">Play Again!</string>
    <string name="np__tournament_results_replay_bar_button_play">Play!</string>
    <string name="np__tournament_results_peer_label_playing">Playing</string>
    <string name="np__tournament_results_random_title">Tournament Results</string>
    <string name="np__tournament_results_random_menu_action_play_with_friends">Play with Friends</string>
    <string name="np__tournament_results_random_fb_log_in_failed_alert_error_description">Failed to log in to Facebook. Please check your connection and try again.</string>
    <string name="np__tournament_results_friends_active_title">Match Results</string>
    <string name="np__tournament_results_friends_past_title">Match Over</string>
    <string name="np__tournament_results_friends_past_button_archive">Archive match</string>
    <string name="np__tournament_results_friends_score_unknown">\?</string>
    <string name="np__tournament_results_friends_time_left_days">DAYS</string>
    <string name="np__tournament_results_friends_time_left_hours">HOURS</string>
    <string name="np__tournament_results_friends_time_left_minutes">MIN</string>
    <string name="np__tournament_results_friends_time_left_seconds">SEC</string>
    <string name="np__tournament_results_friends_time_unknown">\?</string>
    <string name="np__tournament_results_friends_time_left_title">Time left for this match</string>
    <string name="np__tournament_results_friends_menu_action_forfeit">Delete Match</string>
    <string name="np__tournament_results_friends_match_not_found_dialog_text">Sorry, we could not find the match in your match list. It might have been removed.</string>
    <string name="np__tournament_disconnect_title">Lost connection</string>
    <string name="np__tournament_disconnect_dialog_text">Please check your network connections and try again later.</string>
    <string name="np__home_title">Dashboard</string>
    <string name="np__home_play_random_tournament_button">Quick Play</string>
    <string name="np__home_play_with_fb_friends_tournament_button">Play with Friends</string>
    <string name="np__home_your_current_matches_button">Your Matches</string>
    <string name="np__home_updating_user_profle">Updating…</string>
    <string name="np__match_not_found_title">Could not locate match</string>
    <string name="np__match_not_found_dialog_text">Sorry, we could not find the match in your match list. It might have been removed.</string>
    <string name="np__invite_fb_friends_title">Invite Friends</string>
    <string name="np__invite_fb_friends_filter_show_all_button">INVITE</string>
    <string name="np__invite_fb_friends_filter_show_active_button">ACTIVE</string>
    <string name="np__invite_fb_friends_log_in_failed_alert_error_description">Failed to log in to Facebook, please check your connection and try again.</string>
    <string name="np__invite_fb_friends_fetch_failed_alert_error_description">Failed to find your Facebook friends, please check your connection and try again.</string>
    <string name="np__invite_fb_friends_fetching_action_description">Finding your friends</string>
    <string name="np__invite_fb_friends_no_active_friends_dialog_title">Invite your friends</string>
    <string name="np__invite_fb_friends_no_active_friends_dialog_description">"None of your Facebook friends are currently playing %1$s.
Why not let them know?"</string>
    <string name="np__invite_fb_friends_no_active_friends_dialog_positive">Share!</string>
    <string name="np__invite_fb_friends_no_active_friends_dialog_negative">Not now</string>
    <string name="np__invite_fb_friends_limit_passed__dialog_description">You can invite only %d friends to a match</string>
    <string name="np__invite_fb_friends_start_game_button">Start</string>
    <string name="np__invite_fb_friends_creating_match">Initiating match</string>
    <string name="np__current_matches_title">Your Matches</string>
    <string name="np__current_matches_filter_ongoing_button">ONGOING</string>
    <string name="np__current_matches_filter_past_button">PAST</string>
    <string name="np__current_matches_past_match_status">won the match</string>
    <string name="np__current_matches_on_going_time_left_title">left to play</string>
    <string name="np__current_matches_on_going_time_days">days</string>
    <string name="np__current_matches_on_going_time_day">day</string>
    <string name="np__current_matches_on_going_time_hours">hours</string>
    <string name="np__current_matches_on_going_time_hour">hour</string>
    <string name="np__current_matches_on_going_time_minutes">min</string>
    <string name="np__current_matches_on_going_time_minute">minute</string>
    <string name="np__current_matches_on_going_one">One</string>
    <string name="np__current_matches_on_going_new_item">NEW</string>
    <string name="np__current_matches_extra_players">+%d</string>
    <string name="np__current_matches_score_unknown">\?</string>
    <string name="np__current_matches_on_going_not_available">"There aren't any on-going matches.
Create one by inviting your friends!"</string>
    <string name="np__current_matches_past_not_available">"There aren't any past matches"</string>
    <string name="np__facebook_loginview_log_out_button">Log Out</string>
    <string name="np__facebook_loginview_log_in_button">Log In</string>
    <string name="np__facebook_loginview_log_out_action">Log Out</string>
    <string name="np__facebook_loginview_cancel_action">Cancel</string>
    <string name="np__facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="np__facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="np__facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="np__ranks_display_rank_separator">/</string>
</resources>