<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/np__dialog_invite_your_fb_friends_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/np__invite_fb_friends_no_active_friends_dialog_title" android:drawableLeft="@drawable/np__ic_play_with_fb_friends_dialog" style="@style/NP__.DialogWindowTitle" />
    <TextView android:id="@id/np__dialog_invite_your_fb_friends_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/np__content_margin" android:text="@string/np__invite_fb_friends_no_active_friends_dialog_description" style="@style/NP__.Widget.Text.Content.Medium" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0">
        <Button android:id="@id/np__dialog_invite_your_fb_friends_negative" android:background="@drawable/np__widget_button_negative_selector" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/np__widget_button_margin" android:text="@string/np__invite_fb_friends_no_active_friends_dialog_negative" android:layout_weight="0.5" style="@style/NP__.Widget.Button" />
        <Button android:id="@id/np__dialog_invite_your_fb_friends_positive" android:background="@drawable/np__widget_facebook_button_selector" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/np__widget_button_margin" android:text="@string/np__invite_fb_friends_no_active_friends_dialog_positive" android:drawableLeft="@drawable/np__ic_play_with_fb_friends_accept" android:layout_weight="0.5" style="@style/NP__.Widget.Button" />
    </LinearLayout>
</LinearLayout>