<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/np__dialog_alert_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/np__error_message_failed_to_change_name_title" android:drawableLeft="@drawable/np__ic_dialog_error" style="@style/NP__.DialogWindowTitle" />
    <TextView android:id="@id/np__dialog_alert_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/np__content_margin" android:text="@string/np__error_message_failed_to_change_name_description" style="@style/NP__.Widget.Text.Content.Medium" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/np__dialog_alert_button_confirm" android:background="@drawable/np__widget_button_positive_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/np__widget_button_margin" android:text="@string/np__dialog_alert_confirm" android:drawableLeft="@drawable/np__ic_accept" style="@style/NP__.Widget.Button" />
</LinearLayout>