<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/NP__.Fragment"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/np__current_matches_filter_container" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0">
        <Button android:id="@id/np__current_matches_filter_ongoing_button_active" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/np__current_matches_filter_ongoing_button" android:layout_weight="0.5" style="@style/NP__.Widget.SwitchButton.Active" />
        <Button android:id="@id/np__current_matches_filter_ongoing_button_deactive" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/np__current_matches_filter_ongoing_button" android:layout_weight="0.5" style="@style/NP__.Widget.SwitchButton.Deactive" />
        <Button android:id="@id/np__current_matches_filter_past_button_deactive" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/np__current_matches_filter_past_button" android:layout_weight="0.5" style="@style/NP__.Widget.SwitchButton.Deactive" />
        <Button android:id="@id/np__current_matches_filter_past_button_active" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/np__current_matches_filter_past_button" android:layout_weight="0.5" style="@style/NP__.Widget.SwitchButton.Active" />
    </LinearLayout>
    <ListView android:gravity="center" android:id="@id/np__current_matches_list_view" android:background="@null" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fastScrollEnabled="true" />
    <RelativeLayout android:gravity="center" android:id="@id/np__current_matches_empty_view" android:background="@null" android:padding="@dimen/np__content_padding" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:gravity="center" android:id="@id/np__current_matches_empty_view_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/np__current_matches_on_going_not_available" android:layout_centerHorizontal="true" android:layout_centerVertical="true" style="@style/NP__.Widget.Text.Content.Large" />
    </RelativeLayout>
</LinearLayout>