<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/np__grey_dark" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/np__powered_by_dialog_game_container" android:background="@color/np__grey_dark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/np__powered_by_dialog_margin">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/np__powered_by_dialog_game_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/np__ic_nextpeer" android:contentDescription="@string/np__application_name" />
        <TextView android:textAppearance="@style/NP__.TextAppearance.Large" android:textColor="@color/np__white" android:ellipsize="marquee" android:layout_gravity="center_vertical" android:id="@id/np__powered_by_dialog_game_name" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/np__powered_by_dialog_title_margin" android:text="@string/np__application_name" android:scrollHorizontally="true" android:singleLine="true" android:freezesText="true" android:marqueeRepeatLimit="marquee_forever" style="@style/NP__.DialogWindowTitle.PoweredBy" />
    </LinearLayout>
    <ImageView android:layout_gravity="center_horizontal" android:id="@id/np__powered_by_dialog_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/np__ic_power_by" android:contentDescription="@string/np__application_name" style="@style/NP__.DialogWindowTitle.PoweredBy" />
    <TextView android:ellipsize="marquee" android:layout_gravity="center_horizontal" android:id="@id/np__powered_by_dialog_title" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/np__powered_by_dialog_margin" android:text="@string/np__powered_by_dialog_title" android:scrollHorizontally="true" android:singleLine="true" android:freezesText="true" android:marqueeRepeatLimit="marquee_forever" style="@style/NP__.DialogWindowTitle.PoweredBy" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/np__powered_by_dialog_button_confirm" android:background="@drawable/np__widget_button_positive_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/np__widget_button_margin" android:layout_marginTop="@dimen/np__powered_by_dialog_margin" android:text="@string/np__dialog_alert_confirm" android:drawableLeft="@drawable/np__ic_accept" style="@style/NP__.Widget.Button" />
</LinearLayout>